	* merged together two vers
	* finish SEP, and friends, added a mountain of structs, the remainer of
	what was not already in the header file, and added some stub files for
	them all.
	* added simple file support for Section begins and ends, moved the
	char handling code around a slight bit so as to be in a nice looking order
	to me.
ALL TODO

	* continue sections in complex mode, bring my standalone abiword converter up
	to speed with sections, and char props, and do the same for the html converter.
	looking good :-)

	* table properties & lists to be done

	* i figured out what the story is with ole embedded files, ill have to modify
	my ole code so as to be able in the future to parse embedded docs and splice
	them together, which could be a wee bit of a challenge.
	

	* modify configure script so its possible to link against a different expat
	lib, or to disable it or something.
	* add errors via numbered errors to wvInitParser.

	* harden wvConfig against bad pointers, and incomplete sections e.g justification
	* make wvConvert read config from commandline, and 
	* additional code checks for conversion of codepage whatever to iso for
	ancillary strings that might be stored in that format.
	* modify complex code to stop at end of main text
	* do sep and anlv

	* i have Plcfbte's marked as generic empty structures in the old code, which 
	is technically incorrect but works the way i've set up the code to handle it.
	* wvToggle is wrong im sure.
	* the old ffffffff list problem still exists with the new interface, i must 
	finally kill that issue once and for all
	* colspan support, find the smallest common unit, and restart the
	table handling.
	* rowspan support
	* add a fudge factor to the gcf part so as to fudge out insignificent
	twip differences

	4 table rowspan/colspan support

	* use twips from config file throughout mswordview
	I want...
	
	* dont parse a $ with a \ before it.
	* implement whatever special drawing format there is.